@@ -37,6 +37,14 @@ a img {
   -->
 
 
+<DT>XXXX-XX-XX
+<DD>
+<UL>sequent history accessible in external sequent node windows
+<LI>
+<P></P></LI>
+</UL>
+
+
 <DT>2013-05-17: Prooftree 0.12 released
 <DD>
 <UL>
@@ -189,7 +197,7 @@ far as possible)
 <HR noshade size=2>
 <FONT SIZE="-2">
 last changed on 
-<!-- hhmts start -->17 May 2013
+<!-- hhmts start --> 1 Aug 2013
 <!-- hhmts end -->
 by <A HREF="/index.html.en">Hendrik</A>
 </FONT></BODY> </HTML>
