@@ -1,3 +1,7 @@
+2013-08-01  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* add history list in external sequent windows
+
 2013-07-23  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* fix wrong existential info in external node windows
